--- a/style.css
+++ b/style.css
@@ -50,16 +50,25 @@ html *::after {
 
 }
 
-body{
+body {
+    background-color: #ffb457;
+    -webkit-tap-highlight-color: transparent;
+    transition: background-color var(--duration);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+body > div{
     
     margin: 0;
     display: flex;
     height: 100vh;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #ffb457;
-    -webkit-tap-highlight-color: transparent;
-    transition: background-color var(--duration);
+    
 
 }
 
@@ -68,17 +77,17 @@ body{
     display: flex;
     /* Works well with 100% width  */
     width: 32.05em;
-    font-size: 1.5em;
     padding: 0 2.85em;
     position: relative;
     align-items: center;
     justify-content: center;
     background-color: var(--bgColorMenu);
     border-radius: 20px;
+    gap: 10px;
 }
 
 .menu__item{
-    
+    font-size: 1em !important;
     all: unset;
     flex-grow: 1;
     z-index: 100;
@@ -109,7 +118,7 @@ body{
 
 
 .menu__item.active {
-
+    font-size: 1.5em;
     transform: translate3d(0, -.8em , 0);
 
 }
@@ -176,4 +185,47 @@ body{
     .menu{
         font-size: .8em;
     }
+}
+
+
+.bottomValue {
+    text-align: center;
+}
+
+.footerlogo {
+    height: 100px;
+}
+
+.footerlogoimage {
+    margin-left: auto;
+    height: 50px;
+}
+
+.DTEArea {
+    display: flex;
+    gap: 50px;
+}
+
+.separator {
+    font-size: 250px;
+    opacity: 0.35;
+}
+
+input[type="date"]{
+    padding: 15px;
+    background: linear-gradient(-45deg,#ac32e428,#7a18f224,#4901ff24);
+
+    font-family: "Roboto Mono",monospace;
+    color: #ffffff;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+}
+
+::-webkit-calendar-picker-indicator{
+    background-color: #ffffff;
+    padding: 5px;
+    cursor: pointer;
+    border-radius: 3px;
 }
